Bug 66864 - By using full screen applications and then restore them, the toolbar disappears in normal view.
Summary: By using full screen applications and then restore them, the toolbar disappea...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Jan Holesovsky
URL:
Whiteboard: target:4.2.0 target:4.1.5
Keywords: regression
: 67250 69121 70643 70724 71294 71613 71858 72313 72566 73880 74055 74175 (view as bug list)
Depends on:
Blocks: mab4.1
  Show dependency treegraph
 
Reported: 2013-07-12 23:49 UTC by Bastián Díaz
Modified: 2014-01-29 11:41 UTC (History)
22 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastián Díaz 2013-07-12 23:49:11 UTC
Description of problem:
By using LO LO Writer and Calc full screen and then restore the window, the toolbar disappears. The only "easy" way to recover is to restart the application.

Version-Release number of selected component (if applicable):
Versión: 4.1.0.1 - Id. de compilación: 4.1.0.1-8.fc19
fedora 19 (GNOME 3.8.3)

How reproducible:
Always

Steps to Reproduce:
1.Start the application (calc or writer)
2.Start full screen view (Control+Shift+J)
3.restore window

Actual results:
To restore the window, the toolbar disappears.

Expected results:
To restore the window, everything is in place.

Additional info:
Full screen mode is very useful for work focused. This functionality could be added to all applications and improve office suite (as maintain a custom toolbar, and GNOME applications) and unify the keyboard shortcut (F11).

Thanks.
Comment 1 Cor Nouws 2013-07-13 06:06:02 UTC
Hi Bastián,

Thanks for reporting. I can confrim the problem.
Restoring can be done too via the menu View>Toolbar, obviously.

IIRC, I've seen some similar problem after doing a mail merge (standard letter).

(By the way: should be tested with ealier versions from 4.1.-branch)

Regards,
Cor
Comment 2 Bastián Díaz 2013-07-13 06:44:14 UTC
(In reply to comment #1)

Hi Cor.

Yes, indeed you can recover the toolbar with the menu view, so I put the other as "easy mode"
Version I will branch testing and confirm the problem.

thanks
Comment 3 Cor Nouws 2013-07-24 12:27:07 UTC
*** Bug 67250 has been marked as a duplicate of this bug. ***
Comment 4 Cor Nouws 2013-07-24 12:28:10 UTC
as per duplicate: change platform to All
Comment 6 Cor Nouws 2013-09-09 07:15:34 UTC
*** Bug 69121 has been marked as a duplicate of this bug. ***
Comment 7 pierre-yves samyn 2013-10-08 12:11:34 UTC
Hello

Also reproduced with:

- Ubuntu 12.04 & LibO 4.1.1 et 4.1.2.3. 
- Windows Seven 64 bits, LibO 4.1.1.2
- Windows XP Version: 4.1.2.1

There are two workarounds to this problem:
- File> Page Preview
- Window> New window

Regards
Pierre-Yves
Comment 8 sophie 2013-11-05 10:49:43 UTC
Still present in Version: 4.1.3.1
Build ID: b42498da0e3f91b17e51b55c8295ec4f8f22087 - Sophie
Comment 9 Jorendc 2013-11-14 16:12:46 UTC
*** Bug 70643 has been marked as a duplicate of this bug. ***
Comment 10 Jorendc 2013-11-14 16:13:06 UTC
*** Bug 71613 has been marked as a duplicate of this bug. ***
Comment 11 Jan Holesovsky 2013-11-15 10:13:30 UTC
Fixed now in master.
Comment 13 Commit Notification 2013-11-15 10:23:56 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=986644335c3f9e99ec3c6bebc0b75cca0acdf79b

fdo#66864: Return from full-screen should restore toolbars.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 pierre-yves samyn 2013-11-21 15:56:24 UTC
Hello

(In reply to comment #13)
> Jan Holesovsky committed a patch related to this issue.
> 
> http://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=986644335c3f9e99ec3c6bebc0b75cca0acdf79b
> ...
> Affected users are encouraged to test the fix and report feedback.

WORKSFORME with windows 7/64 & Version: 4.2.0.0.alpha1+
Build ID: 6788b92e15889beb151baf2b8ca8719f6ea38481
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-21_02:40:15

Thank you
Regards
Pierre-Yves
Comment 15 Jorendc 2013-11-26 12:04:27 UTC
*** Bug 71858 has been marked as a duplicate of this bug. ***
Comment 16 Jorendc 2013-11-26 12:16:14 UTC
(In reply to comment #13)
> Jan Holesovsky committed a patch related to this issue.
> It has been pushed to "master":

Is it possible to backport this to 4.1-branch as well :)?
Following comments in this bug and bug 71858 this is reproducible on 4.1.3.2.

Kind regards,
Joren
Comment 17 sophie 2013-11-29 13:16:13 UTC
*** Bug 71294 has been marked as a duplicate of this bug. ***
Comment 18 Cheng-Chia Tseng 2013-12-04 14:53:12 UTC
*** Bug 72313 has been marked as a duplicate of this bug. ***
Comment 19 Caolán McNamara 2013-12-12 20:34:28 UTC
*** Bug 72566 has been marked as a duplicate of this bug. ***
Comment 20 Commit Notification 2013-12-13 09:04:01 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=171f2ca39a08299abe54e92e8096cdaa5e02a4dc&h=libreoffice-4-1

fdo#66864: Return from full-screen should restore toolbars.


It will be available in LibreOffice 4.1.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Andras Timar 2013-12-27 20:46:29 UTC
*** Bug 70724 has been marked as a duplicate of this bug. ***
Comment 22 tim 2014-01-20 16:22:37 UTC
I reported this in #70724 in Base - a duplicate.

I have checked in 4.2.0 RC2.  It is fixed there.  Thanks.
Comment 23 Michael Stahl (allotropia) 2014-01-22 16:20:48 UTC
*** Bug 73880 has been marked as a duplicate of this bug. ***
Comment 24 m_a_riosv 2014-01-25 22:44:20 UTC
*** Bug 74055 has been marked as a duplicate of this bug. ***
Comment 25 Maxim Monastirsky 2014-01-29 11:41:57 UTC
*** Bug 74175 has been marked as a duplicate of this bug. ***